Criado catalogo e manutanção de categorias

--- a/src/DevStoreApp/app/views/home/index.html
+++ b/src/DevStoreApp/app/views/home/index.html
@@ -1,8 +1,7 @@
 ﻿<section class="content-header">
     <h1>{{ vm.title }} <small>DevStore</small></h1>
     <ol class="breadcrumb">
-        <li class="active">Página Inicial</li>
-        <li>{{ vm.title }}</li>
+        <li class="active">{{ vm.title }}</li>
     </ol>
 </section>
 
