--- a/src/DevStoreApp/app/views/product/details.html
+++ b/src/DevStoreApp/app/views/product/details.html
@@ -2,7 +2,7 @@
     <h1>Detalhes do Produto <small>DevStore</small></h1>
     <ol class="breadcrumb">
         <li><a href="#/">Home</a></li>
-        <li class="active"><a href="#/produtos">Produtos</a></li>
+        <li><a href="#/produtos">Produtos</a></li>
         <li class="active">{{ vm.product.title }}</li>
     </ol>
 </section>
