--- a/src/DevStoreApp/app/views/product/index.html
+++ b/src/DevStoreApp/app/views/product/index.html
@@ -1,7 +1,8 @@
 ﻿<section class="content-header">
     <h1>Página Inicial <small>DevStore</small></h1>
     <ol class="breadcrumb">
-        <li class="active">Página Inicial</li>
+        <li><a href="#/">Home</a></li>
+        <li class="active">Produtos</li>
     </ol>
 </section>
 
